// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Content > create > should create content 1`] = `
{
  "body": "test",
  "created_at": 2023-09-19T10:29:20.967Z,
  "deleted_at": null,
  "id": "502d02a1-2e38-4cc6-9e41-55c978e34c67",
  "owner_id": "605144ec-9f0d-437b-96ee-1b5f4e54f5f9",
  "owner_username": "leoferreiralima",
  "parent_id": null,
  "published_at": null,
  "slug": "e-opcional",
  "source_url": null,
  "status": "draft",
  "tabcoins": 0,
  "title": "test",
  "updated_at": 2023-09-19T10:29:20.967Z,
}
`;

exports[`Content > create > should throw an error when create content with invalid parameters 1`] = `"\\"body\\" possui o valor inválido \\"null\\"."`;

exports[`Content > get > should get all contents and pagination 1`] = `
{
  "first_page": 1,
  "last_page": 6,
  "next_page": 2,
  "page": 1,
  "per_page": 30,
  "previous_page": undefined,
  "strategy": "relevant",
  "total_rows": 175,
}
`;

exports[`Content > get > should get all contents and pagination 2`] = `
[
  {
    "children_deep_count": 2,
    "created_at": 2023-09-19T12:16:04.812Z,
    "deleted_at": null,
    "id": "id",
    "owner_id": "owner_id",
    "owner_username": "username",
    "parent_id": null,
    "published_at": 2023-09-19T12:16:04.837Z,
    "slug": "slug",
    "source_url": "https://source.url.com/source",
    "status": "published",
    "tabcoins": 1,
    "title": "title",
    "updated_at": 2023-09-19T12:16:04.812Z,
  },
]
`;

exports[`Content > get > should get all contents for a specific user 1`] = `
{
  "first_page": 1,
  "last_page": 6,
  "next_page": 2,
  "page": 1,
  "per_page": 30,
  "previous_page": undefined,
  "strategy": "relevant",
  "total_rows": 175,
}
`;

exports[`Content > get > should get all contents for a specific user 2`] = `
[
  {
    "children_deep_count": 2,
    "created_at": 2023-09-19T12:16:04.812Z,
    "deleted_at": null,
    "id": "id",
    "owner_id": "owner_id",
    "owner_username": "username",
    "parent_id": null,
    "published_at": 2023-09-19T12:16:04.837Z,
    "slug": "slug",
    "source_url": "https://source.url.com/source",
    "status": "published",
    "tabcoins": 1,
    "title": "title",
    "updated_at": 2023-09-19T12:16:04.812Z,
  },
]
`;

exports[`Content > get > should get all contents for current user 1`] = `
{
  "first_page": 1,
  "last_page": 6,
  "next_page": 2,
  "page": 1,
  "per_page": 30,
  "previous_page": undefined,
  "strategy": "relevant",
  "total_rows": 175,
}
`;

exports[`Content > get > should get all contents for current user 2`] = `
[
  {
    "children_deep_count": 2,
    "created_at": 2023-09-19T12:16:04.812Z,
    "deleted_at": null,
    "id": "id",
    "owner_id": "owner_id",
    "owner_username": "username",
    "parent_id": null,
    "published_at": 2023-09-19T12:16:04.837Z,
    "slug": "slug",
    "source_url": "https://source.url.com/source",
    "status": "published",
    "tabcoins": 1,
    "title": "title",
    "updated_at": 2023-09-19T12:16:04.812Z,
  },
]
`;

exports[`Content > get > should get content by slug 1`] = `
{
  "body": "body",
  "children_deep_count": 2,
  "created_at": 2023-09-19T12:16:04.812Z,
  "deleted_at": null,
  "id": "id",
  "owner_id": "owner_id",
  "owner_username": "username",
  "parent_id": null,
  "published_at": 2023-09-19T12:16:04.837Z,
  "slug": "slug",
  "source_url": "https://source.url.com/source",
  "status": "published",
  "tabcoins": 1,
  "title": "title",
  "updated_at": 2023-09-19T12:16:04.812Z,
}
`;

exports[`Content > get > should get content by slug for current user 1`] = `
{
  "body": "body",
  "children_deep_count": 2,
  "created_at": 2023-09-19T12:16:04.812Z,
  "deleted_at": null,
  "id": "id",
  "owner_id": "owner_id",
  "owner_username": "username",
  "parent_id": null,
  "published_at": 2023-09-19T12:16:04.837Z,
  "slug": "slug",
  "source_url": "https://source.url.com/source",
  "status": "published",
  "tabcoins": 1,
  "title": "title",
  "updated_at": 2023-09-19T12:16:04.812Z,
}
`;

exports[`Content > get > should return correct page when is last page 1`] = `
{
  "first_page": 1,
  "last_page": 6,
  "next_page": undefined,
  "page": 6,
  "per_page": 30,
  "previous_page": 5,
  "strategy": "relevant",
  "total_rows": 175,
}
`;

exports[`Content > get > should return correct page when is last page 2`] = `
[
  {
    "children_deep_count": 2,
    "created_at": 2023-09-19T12:16:04.812Z,
    "deleted_at": null,
    "id": "id",
    "owner_id": "owner_id",
    "owner_username": "username",
    "parent_id": null,
    "published_at": 2023-09-19T12:16:04.837Z,
    "slug": "slug",
    "source_url": "https://source.url.com/source",
    "status": "published",
    "tabcoins": 1,
    "title": "title",
    "updated_at": 2023-09-19T12:16:04.812Z,
  },
]
`;

exports[`Content > get > should throw an error when content not found 1`] = `"O conteúdo informado não foi encontrado no sistema."`;

exports[`Content > get > should throw an error when parameter is invalid 1`] = `"\\"page\\" deve possuir um valor mínimo de 1."`;
